--- a/mountain_passes/.env
+++ b/mountain_passes/.env
@@ -1,3 +1,5 @@
+SECRET_KEY= django-insecure-#hzhsg&8(w=9)6*jaut-@0t)9!y+ss0g_h5+qxmg#)6b0n5muu
+DEBUG=True
 DB_NAME=your_db_name
 DB_USER=your_db_user
 DB_PASSWORD=your_db_password
